// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly handles yScale() returning undefined 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(10, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={0}
          y={1}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={53.33333333333333}
            y={6}
          >
            100.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={6}
        >
          a
        </text>
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={0}
          y={1}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={40}
            y={6}
          >
            75.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={6}
        >
          b
        </text>
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={0}
          y={1}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={80}
            y={6}
          >
            150.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={6}
        >
          c
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`renders correctly: align ticks 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(4, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={10}
          y={10}
        />
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={10}
          y={28}
        />
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={10}
          y={46}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`renders correctly: default 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(10, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={0}
          y={10}
        />
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={0}
          y={28}
        />
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={0}
          y={46}
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`renders correctly: with yValues 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(10, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={0}
          y={10}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={53.33333333333333}
            y={15}
          >
            100.0
          </text>
        </Tooltip>
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={0}
          y={28}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={40}
            y={33}
          >
            75.0
          </text>
        </Tooltip>
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={0}
          y={46}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={80}
            y={51}
          >
            150.0
          </text>
        </Tooltip>
      </g>
    </g>
  </g>
</svg>
`;

exports[`renders correctly: with yValues and yTicks 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(10, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={0}
          y={10}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={53.33333333333333}
            y={15}
          >
            100.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={15}
        >
          a
        </text>
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={0}
          y={28}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={40}
            y={33}
          >
            75.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={33}
        >
          b
        </text>
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={0}
          y={46}
        />
        <Tooltip>
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={80}
            y={51}
          >
            150.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={51}
        >
          c
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`renders correctly: with yValues, yTicks and yTooltips 1`] = `
<svg
  className="bar-chart"
  height={75}
  width={100}
>
  <g
    transform="translate(10, 10)"
  >
    <g>
      <g
        key="0"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={54}
          x={0}
          y={10}
        />
        <Tooltip
          overlay="a - 100"
        >
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={53.33333333333333}
            y={15}
          >
            100.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={15}
        >
          a
        </text>
      </g>
      <g
        key="1"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={41}
          x={0}
          y={28}
        />
        <Tooltip
          overlay="b - 75"
        >
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={40}
            y={33}
          >
            75.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={33}
        >
          b
        </text>
      </g>
      <g
        key="2"
      >
        <rect
          className="bar-chart-bar"
          height={10}
          width={81}
          x={0}
          y={46}
        />
        <Tooltip
          overlay="c - 150"
        >
          <text
            className="bar-chart-tick histogram-value"
            dx="1em"
            dy="0.3em"
            x={80}
            y={51}
          >
            150.0
          </text>
        </Tooltip>
        <text
          className="bar-chart-tick histogram-tick"
          dx="-1em"
          dy="0.3em"
          x={0}
          y={51}
        >
          c
        </text>
      </g>
    </g>
  </g>
</svg>
`;
